2010-07-28  Alex Nicolaou  <anicolao@chromium.org>

Reviewed by Ojan Vafai.

        Set incorrect but close expectations for mask-colorspace.svg on mac
        https://bugs.webkit.org/show_bug.cgi?id=43102

        Blocks:
          [chromium] r63450 caused some svg mask tests to fail pixel tests
          https://bugs.webkit.org/show_bug.cgi?id=42403

        ImageBufferCG.cpp uses CoreGraphics to do the transform of SVG masks
        into LinearRGB, but only for MAC which means not for CHROMIUM, so I
        have changed the #if to account for both platforms. I am assuming this
        isn't in for windows because it's missing in CG itself, but I didn't
        verify that.

        * platform/graphics/cg/ImageBufferCG.cpp:
        (WebCore::ImageBuffer::ImageBuffer):
2010-07-28  Alex Nicolaou  <anicolao@chromium.org>

        Reviewed by Ojan Vafai.

        Set incorrect but close expectations for mask-colorspace.svg on mac
        https://bugs.webkit.org/show_bug.cgi?id=43102

        Blocks:
          [chromium] r63450 caused some svg mask tests to fail pixel tests
          https://bugs.webkit.org/show_bug.cgi?id=42403

        On my Mac, after my best efforts, the mask colorspace doesn't
        seem to come out right. Though the pixel values in the test
        rectangle should be 111, they come out to 104, and ultimately
        it is because the pixel values coming out of ImageBufferCG are
        not linearized properly. Checking in this expected result because
        visually the colours are close enough and I want to catch other
        regressions, but if this starts to fail because the first image
        has color 111,111,111 in the rectange and 76,76,76 or 78,78,78 in
        the circle, the actual problem will have been corrected. (111 and
        78 are the correct values).

        Also removed fail expectations for those tests that are now
        passing on my Mac.

        * platform/chromium/test_expectations.txt:
        * platform/mac/svg/custom/mask-colorspace-expected.checksum:
        * platform/mac/svg/custom/mask-colorspace-expected.png:


Canonical link: https://commits.webkit.org/55078@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64254 268f45cc-cd09-0410-ab3c-d52691b4dbfc